--- a/servicos.html
+++ b/servicos.html
@@ -130,7 +130,7 @@
                     <div class="nav-item dropdown hoverdrop">
                         <span href="#" class="nav-link active" data-toggle="dropdown">Serviços</span>
                         <div class="dropdown-menu rounded-0 m-0">
-                            <a href="#tu" class="dropdown-item">Terapia unificada</a><a href="#dt" class="dropdown-item">Liberação miofascial (Deep Tissue)</a>
+                            <a href="#tu" class="dropdown-item">Massagem para dor (Clínica)</a><a href="#dt" class="dropdown-item">Liberação miofascial (Deep Tissue)</a>
                             <a href="#qm" class="dropdown-item">Quick Massage</a>
                             <a href="#sueca" class="dropdown-item">Massagem Sueca (Clássica)</a>
                             <a href="#relax" class="dropdown-item">Massagem Relaxante</a>
@@ -174,33 +174,24 @@
                     <img class="img-fluid  tuiconp" src="img/f2.png" alt="">
                 </div>
                 <div class="col-lg-9">
-                    <h1 class="mb-4">Terapia unificada</h1>
-                    <div class="pl-4 border-left border-primary">Especialmente desenvolvida para atender às suas necessidades individuais e proporcionar uma experiência única de reencontro com o equilíbrio e o bem-estar. Como massoterapeuta, compreendo a importância de abordar os diversos aspectos do seu bem-estar físico e mental. Cada indivíduo é único e, por isso, merece um tratamento exclusivo, adaptado às suas demandas específicas.
-                       <p>Com base na avaliação, em seus objetivos e preferências um plano personalizado será criado, e dentre todas as técnicas e recursos disponíveis, serão selecionandas os mais adequados onde trabalharão em sinergia para buscar o resultado que você almeja.</p>
-                       <p>Esse serviço abrangente e personalizado é dedicado a elevar sua qualidade de vida e promover um estado geral de saúde e bem-estar. </p>
+                    <h1 class="mb-4">Massagem para dor (Clínica)</h1>
+                    <div class="pl-4 border-left border-primary">Especialmente desenvolvida para promover o alívio da dor e o bem-estar, essa massagem possui varias técnicas de massagem e terapia manual que serão utilizados de acordo com a necessidade para promover a analgesia e alivio de tensões.
+                       
                         <p>Algumas técnicas:</p>
                         <ul>
                             <li>Liberação miofascial (Deep Tissue)</li>
-                            <li>Pedras quentes</li>
+                            <li>Pompage</li>
+                            <li>Tração</li>
                             <li>Massagem Sueca (Clássica)</li>
+                            <li>Mobilização articular</li>
                             <li>Liberação funcional avançada</li>
+                            <li>Breathwork</li>
                             <li>Massagem Relaxante</li>
                             <li>Drenagem Linfática</li>
                             <li>Liberação miofascial (Conceito ROLF)</li>
-                            <li>Ventosaterapia</li>
-                            <li>Breathwork</li>
-                            <li>Auriculoterapia</li>
                         </ul>
-                        <p>Alguns recursos:</p>
-                        <ul>
-                            <li>Pedras quentes</li>
-                            <li>Ventosas</li>
-                            <li>Pantalas</li>
-                            <li>Bambu</li>
-                            <li>TENS</li>
-                            <li>Pistola de massagem</li>
-                        </ul>
-                    <a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20mais%20informa%C3%A7%C3%B5es%20sobre%20a%20Terapia%20unificada." class="btn btn-primary mt-2" target="_blank">Mais informações</a></div>
+
+                    <a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20mais%20informa%C3%A7%C3%B5es%20sobre%20a%20Massagem%20para%20dor." class="btn btn-primary mt-2" target="_blank">Mais informações</a></div>
                        </div>
             </div>
         </div>
