--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     <div class="nav-item dropdown hoverdrop">
                         <span href="#" class="nav-link" data-toggle="dropdown">Serviços</span>
                         <div class="dropdown-menu rounded-0 m-0">
-                            <a href="servicos#tu" class="dropdown-item">Terapia unificada</a><a href="servicos#dt" class="dropdown-item">Liberação miofascial (Deep Tissue)</a><a href="servicos#qm" class="dropdown-item">Quick Massage</a>
+                            <a href="servicos#tu" class="dropdown-item">Massagem para dor (Clínica)</a><a href="servicos#dt" class="dropdown-item">Liberação miofascial (Deep Tissue)</a><a href="servicos#qm" class="dropdown-item">Quick Massage</a>
                             <a href="servicos#sueca" class="dropdown-item">Massagem Sueca (Clássica)</a>
                             <a href="servicos#relax" class="dropdown-item">Massagem Relaxante</a>
                             <a href="servicos#dl" class="dropdown-item">Drenagem Linfática</a>
@@ -161,9 +161,9 @@
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h6 class="text-white text-uppercase mb-3 animate__animated animate__fadeInDown" style="letter-spacing: 3px;">Terapias Manuais</h6>
-                            <h3 class="display-3 text-capitalize text-white mb-3">Terapia unificada</h3>
-                            <p class="mx-md-5 px-5">Com base na avaliação, em seus objetivos e preferências um plano personalizado será criado, e dentre todas as técnicas e recursos disponíveis, serão selecionandas os mais adequados onde trabalharão em sinergia para buscar o resultado que você almeja.</p>
-                            <a class="btn btn-outline-light py-3 px-4 m-3 animate__animated animate__fadeInUp" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Terapia%20unificada." target="_blank">Agendar</a>
+                            <h3 class="display-3 text-capitalize text-white mb-3">Massagem para dor (Clínica)</h3>
+                            <p class="mx-md-5 px-5">Com base em sua dor e preferências, um mix de técnicas de massagem e terapia manual serão utilizados para aliviar sua dor e te trazer bem-estar.</p>
+                            <a class="btn btn-outline-light py-3 px-4 m-3 animate__animated animate__fadeInUp" href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Massagem%20para%20dor." target="_blank">Agendar</a>
                             <a class="btn btn-outline-light py-3 px-4 m-3 animate__animated animate__fadeInUp" href="servicos#tu" >Saiba mais</a>
                         </div>
                         </div>
@@ -872,7 +872,7 @@
                         <div class="col-sm-6 mb-5">
                             <h5 class="text-white text-uppercase mb-4">Nossos serviços</h5>
                             <div class="d-flex flex-column justify-content-start">
-                                <a class="text-white-50 mb-2" href="servicos#tu"><i class="fa fa-angle-right mr-2"></i>Terapia unificada</a><a class="text-white-50 mb-2" href="servicos#dt"><i class="fa fa-angle-right mr-2"></i>Liberação miofascial <br>(Deep Tissue)</a><a class="text-white-50 mb-2" href="servicos#qm"><i class="fa fa-angle-right mr-2"></i>Quick Massage</a>
+                                <a class="text-white-50 mb-2" href="servicos#tu"><i class="fa fa-angle-right mr-2"></i>Massagem para dor (Clínica)</a><a class="text-white-50 mb-2" href="servicos#dt"><i class="fa fa-angle-right mr-2"></i>Liberação miofascial <br>(Deep Tissue)</a><!-- <a class="text-white-50 mb-2" href="servicos#qm"><i class="fa fa-angle-right mr-2"></i>Quick Massage</a> -->
                                 <a class="text-white-50 mb-2" href="servicos#sueca"><i class="fa fa-angle-right mr-2"></i>Massagem Sueca (Clássica)</a>
                                 <a class="text-white-50 mb-2" href="servicos#relax"><i class="fa fa-angle-right mr-2"></i>Massagem Relaxante</a>
                                 <a class="text-white-50 mb-2" href="servicos#dl"><i class="fa fa-angle-right mr-2"></i>Drenagem Linfática</a>
