--- a/preco.html
+++ b/preco.html
@@ -130,7 +130,7 @@
                     <div class="nav-item dropdown hoverdrop">
                         <span href="#" class="nav-link " data-toggle="dropdown">Serviços</span>
                         <div class="dropdown-menu rounded-0 m-0">
-                            <a href="servicos#tu" class="dropdown-item">Terapia unificada</a><a href="servicos#dt" class="dropdown-item">Liberação miofascial (Deep Tissue)</a><a href="servicos#qm" class="dropdown-item">Quick Massage</a>
+                            <a href="servicos#tu" class="dropdown-item">Massagem para dor (Clínica)</a><a href="servicos#dt" class="dropdown-item">Liberação miofascial (Deep Tissue)</a><a href="servicos#qm" class="dropdown-item">Quick Massage</a>
                             <a href="servicos#sueca" class="dropdown-item">Massagem Sueca (Clássica)</a>
                             <a href="servicos#relax" class="dropdown-item">Massagem Relaxante</a>
                             <a href="servicos#dl" class="dropdown-item">Drenagem Linfática</a>
@@ -177,8 +177,8 @@
                     <img class="img-fluid w-100" src="img/f2.png" alt="" style="width: auto !important;max-height: 200px;">
                 </div>
                 <div class="col-lg-5">
-                    <h4 class="mb-4">Terapia unificada</h4>
-                    <div class="pl-4 border-left border-primary"><strong>Duração e preço:</strong> <br>50 min - R$130,00<br>70 min - R$160,00<br>90 min - R$180,00<br><strong>Dinâmica:</strong> Terapia personalizada onde abrange todas as técnicas e recursos disponíveis ao terapeuta, sendo aplicadas de acordo com os objetivos, preferências e necessidades do cliente.<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Terapia%20unificada." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
+                    <h4 class="mb-4">Massagem para dor (Clínica)</h4>
+                    <div class="pl-4 border-left border-primary"><strong>Duração e preço:</strong> <br>50 min - R$140,00<br>90 min - R$250,00<br>110 min - R$270,00<br><strong>Dinâmica:</strong> Com base em sua dor e preferências, um mix de técnicas de massagem e terapia manual serão utilizados para aliviar sua dor e te trazer bem-estar.<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Massagem%20para%20dor." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
                        </div>
             </div>
         </div>
@@ -189,11 +189,11 @@
                 </div>
                 <div class="col-lg-5">
                     <h4 class="mb-4">Liberação miofascial (Deep tissue)</h4>
-                    <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$110,00<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Libera%C3%A7%C3%A3o%20miofascial%20(Deep%20tissue)." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
+                    <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$150,00<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Libera%C3%A7%C3%A3o%20miofascial%20(Deep%20tissue)." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
                        </div>
             </div>
         </div>
-        <div class="container py-5">
+       <!-- <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-3 pb-3 pb-lg-0 text-center">
                     <img class="img-fluid w-100" style="padding: 20px;" src="img/quick.png" alt="">
@@ -203,7 +203,7 @@
                     <div class="pl-4 border-left border-primary"><strong>Duração e preço:</strong><br> 15 min - R$30,00<br>20 min - R$40,00<br>30 min - R$60,00<br><strong>Disponível somente na unidade Instituto Fisiologic</strong><br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Quick%20Massage." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
                        </div>
             </div>
-        </div>
+        </div> -->
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-3 pb-3 pb-lg-0 text-center">
@@ -211,7 +211,7 @@
                 </div>
                 <div class="col-lg-5">
                     <h4 class="mb-4">Massagem Sueca (Clássica)</h4>
-                    <div class="pl-4 border-left border-primary"><strong>Duração e preço:</strong><br> 50 min - R$100,00<br>70 min - R$130,00<br>90 min - R$160,00<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Massagem%20Sueca(Cl%C3%A1ssica)." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
+                    <div class="pl-4 border-left border-primary"><strong>Duração e preço:</strong><br>50 min - R$140,00<br>90 min - R$250,00<br>110 min - R$270,00<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Massagem%20Sueca(Cl%C3%A1ssica)." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
                        </div>
             </div>
         </div>
@@ -222,7 +222,7 @@
                 </div>
                 <div class="col-lg-5">
                     <h4 class="mb-4">Massagem Relaxante</h4>
-                    <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$100,00<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Massagem%20Relaxante." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
+                    <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$140,00<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Massagem%20Relaxante." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
                        </div>
             </div>
         </div>
@@ -234,7 +234,7 @@
                 </div>
                 <div class="col-lg-5">
                     <h4 class="mb-4">Drenagem linfática</h4>
-                    <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$90,00<br>Pacote 6 sessões: <strong>10% de desconto</strong><br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Drenagem%20linf%C3%A1tica." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
+                    <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$130,00<br>Pacote 6 sessões: <strong>10% de desconto</strong><br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Drenagem%20linf%C3%A1tica." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
                        </div>
             </div>
         </div>
@@ -247,7 +247,7 @@
                 </div>
                 <div class="col-lg-5">
                     <h4 class="mb-4">Massagem com pedras quentes</h4>
-                    <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$120,00<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Massagem%20com%20pedras%20quentes." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
+                    <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$160,00<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Massagem%20com%20pedras%20quentes." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
                        </div>
             </div>
         </div>
@@ -261,7 +261,7 @@
                 </div>
                 <div class="col-lg-5">
                     <h4 class="mb-4">Ventosaterapia</h4>
-                   <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$110,00<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Ventosaterapia." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
+                   <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 50 min<br><strong>Preço:</strong> R$160,00<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Ventosaterapia." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
                        </div>
             </div>
         </div>
@@ -273,7 +273,7 @@
                 </div>
                 <div class="col-lg-5">
                     <h4 class="mb-4">Liberação miofascial (Conceito ROLF)</h4>
-                    <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 60-90 min<br><strong>Preço:</strong> R$210,00<br><strong>Atenção:</strong> O protocolo necessita de em média <strong>10 sessões</strong><br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Libera%C3%A7%C3%A3o%20miofascial%20(Conceito%20ROLF)." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
+                    <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 60-90 min<br><strong>Preço:</strong> R$250,00<br><strong>Atenção:</strong> O protocolo necessita de em média <strong>10 sessões</strong><br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Libera%C3%A7%C3%A3o%20miofascial%20(Conceito%20ROLF)." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
                        </div>
             </div>
         </div>
@@ -284,7 +284,7 @@
                 </div>
                 <div class="col-lg-5">
                     <h4 class="mb-4">Auriculoterapia</h4>
-                    <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 15-30 min<br><strong>Preço:</strong> R$60,00<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Auriculoterapia." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
+                    <div class="pl-4 border-left border-primary"><strong>Duração:</strong> 15-30 min<br><strong>Preço:</strong> R$100,00<br><a href="https://api.whatsapp.com/send?phone=5511974237159&text=Ol%C3%A1%20Will!%20Gostaria%20de%20agendar%20uma%20sess%C3%A3o%20de%20Auriculoterapia." class="btn btn-primary mt-2" target="_blank">Agendar</a></div>
                        </div>
             </div>
         </div>
@@ -340,7 +340,7 @@
                         <div class="col-sm-6 mb-5">
                             <h5 class="text-white text-uppercase mb-4">Nossos serviços</h5>
                             <div class="d-flex flex-column justify-content-start">
-                                <a class="text-white-50 mb-2" href="servicos#tu"><i class="fa fa-angle-right mr-2"></i>Terapia unificada</a><a class="text-white-50 mb-2" href="servicos#dt"><i class="fa fa-angle-right mr-2"></i>Liberação miofascial <br>(Deep Tissue)</a><a class="text-white-50 mb-2" href="servicos#qm"><i class="fa fa-angle-right mr-2"></i>Quick Massage</a>
+                                <a class="text-white-50 mb-2" href="servicos#tu"><i class="fa fa-angle-right mr-2"></i>Massagem para dor (Clínica)</a><a class="text-white-50 mb-2" href="servicos#dt"><i class="fa fa-angle-right mr-2"></i>Liberação miofascial <br>(Deep Tissue)</a><!-- <a class="text-white-50 mb-2" href="servicos#qm"><i class="fa fa-angle-right mr-2"></i>Quick Massage</a> -->
                                 <a class="text-white-50 mb-2" href="servicos#sueca"><i class="fa fa-angle-right mr-2"></i>Massagem Sueca (Clássica)</a>
                                 <a class="text-white-50 mb-2" href="servicos#relax"><i class="fa fa-angle-right mr-2"></i>Massagem Relaxante</a>
                                 <a class="text-white-50 mb-2" href="servicos#dl"><i class="fa fa-angle-right mr-2"></i>Drenagem Linfática</a>
