--- a/servicos.html
+++ b/servicos.html
@@ -175,7 +175,7 @@
                 </div>
                 <div class="col-lg-9">
                     <h1 class="mb-4">Massagem para dor (Clínica)</h1>
-                    <div class="pl-4 border-left border-primary">Especialmente desenvolvida para promover o alívio da dor e o bem-estar, essa massagem possui varias técnicas de massagem e terapia manual que serão utilizados de acordo com a necessidade para promover a analgesia e alivio de tensões.
+                    <div class="pl-4 border-left border-primary">Especialmente desenvolvida para promover o alívio da dor e bem-estar, essa massagem possui varias técnicas de massagem e terapia manual que serão utilizados de acordo com a necessidade para promover a analgesia e alivio de tensões.
                        
                         <p>Algumas técnicas:</p>
                         <ul>
