--- a/preco.html
+++ b/preco.html
@@ -130,7 +130,7 @@
                     <div class="nav-item dropdown hoverdrop">
                         <span href="#" class="nav-link " data-toggle="dropdown">Serviços</span>
                         <div class="dropdown-menu rounded-0 m-0">
-                            <a href="servicos#tu" class="dropdown-item">Massagem para dor (Clínica)</a><a href="servicos#dt" class="dropdown-item">Liberação miofascial (Deep Tissue)</a><a href="servicos#qm" class="dropdown-item">Quick Massage</a>
+                            <a href="servicos#tu" class="dropdown-item">Massagem para dor (Clínica)</a><a href="servicos#dt" class="dropdown-item">Liberação miofascial (Deep Tissue)</a><!-- <a href="servicos#qm" class="dropdown-item">Quick Massage</a> -->
                             <a href="servicos#sueca" class="dropdown-item">Massagem Sueca (Clássica)</a>
                             <a href="servicos#relax" class="dropdown-item">Massagem Relaxante</a>
                             <a href="servicos#dl" class="dropdown-item">Drenagem Linfática</a>
