--- a/servicos.html
+++ b/servicos.html
@@ -212,7 +212,7 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid py-5" id="qm">
+    <!--<div class="container-fluid py-5" id="qm">
         <div class="container py-5">
             <div class="row align-items-center">
                 <div class="col-lg-3 pb-5 pb-lg-0">
@@ -225,7 +225,7 @@
                        </div>
             </div>
         </div>
-    </div>
+    </div>-->
     <div class="container-fluid py-5" id="sueca">
         <div class="container py-5">
             <div class="row align-items-center">
