--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     <div class="nav-item dropdown hoverdrop">
                         <span href="#" class="nav-link" data-toggle="dropdown">Serviços</span>
                         <div class="dropdown-menu rounded-0 m-0">
-                            <a href="servicos#tu" class="dropdown-item">Massagem para dor (Clínica)</a><a href="servicos#dt" class="dropdown-item">Liberação miofascial (Deep Tissue)</a><a href="servicos#qm" class="dropdown-item">Quick Massage</a>
+                            <a href="servicos#tu" class="dropdown-item">Massagem para dor (Clínica)</a><a href="servicos#dt" class="dropdown-item">Liberação miofascial (Deep Tissue)</a><!-- <a href="servicos#qm" class="dropdown-item">Quick Massage</a> -->
                             <a href="servicos#sueca" class="dropdown-item">Massagem Sueca (Clássica)</a>
                             <a href="servicos#relax" class="dropdown-item">Massagem Relaxante</a>
                             <a href="servicos#dl" class="dropdown-item">Drenagem Linfática</a>
@@ -181,7 +181,7 @@
                         </div>
                         </div>
                 </div>
-                <div class="carousel-item position-relative" style="min-height: 100vh;">
+               <!-- <div class="carousel-item position-relative" style="min-height: 100vh;">
                     
                     <a href="servicos#qm"><img class="position-absolute w-100 carqm" src="img/quickm.jpg" style="object-fit: cover;"></a>
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
@@ -194,7 +194,7 @@
 
                         </div>
                         </div>
-                </div>
+                </div>-->
                 <div class="carousel-item position-relative" style="min-height: 100vh;">
                     <a href="servicos#dt"><img class="position-absolute w-100 h-100" src="img/lib.jpg" style="object-fit: cover;"></a>
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
