--- a/index.html
+++ b/index.html
@@ -312,13 +312,15 @@
                     <div class="row pt-3">
                         <div class="col-6">
                             <div class="bg-light text-center p-4">
+                                <h6 class="text-uppercase">Contamos com</h6>
                                 <h3 class="display-4 text-primary" data-toggle="counter-up">2</h3>
                                 <h6 class="text-uppercase">Unidades</h6>
                             </div>
                         </div>
                         <div class="col-6">
                             <div class="bg-light text-center p-4">
-                                <h3 class="display-4 text-primary" data-toggle="counter-up">256</h3>
+                                <h6 class="text-uppercase">Mais de</h6>
+                                <h3 class="display-4 text-primary" data-toggle="counter-up">400</h3>
                                 <h6 class="text-uppercase">Sessões realizadas</h6>
                             </div>
                         </div>
