--- a/servicos.html
+++ b/servicos.html
@@ -175,7 +175,7 @@
                 </div>
                 <div class="col-lg-9">
                     <h1 class="mb-4">Massagem para dor (Clínica)</h1>
-                    <div class="pl-4 border-left border-primary">Especialmente desenvolvida para promover o alívio da dor e bem-estar, essa massagem possui varias técnicas de massagem e terapia manual que serão utilizados de acordo com a necessidade para promover a analgesia e alivio de tensões.
+                    <div class="pl-4 border-left border-primary">Especialmente desenvolvida para aliviar a dor, tensões e promover o bem-estar. <br>É indicada para dores em geral, podendo estar relacionadas a postura, stress, tensões, dor pós-treino(dor muscular tardia), dor de cabeça(cefaleia), alterações musculoesqueléticas e outras, caso tenha alguma dúvida se essa massagem pode te ajudar, entre em contato diretamente pelo WhatsApp que estarei disponivel para te escutar e sanar sua dúvidas.<br> Essa massagem possui varias técnicas de massagem e terapia manual que serão utilizados em conjunto e de acordo com a sua necessidade, para promover a analgesia e alivio de tensões.
                        
                         <p>Algumas técnicas:</p>
                         <ul>
