--- a/tree.html
+++ b/tree.html
@@ -30,7 +30,7 @@ https://github.com/ardacarofficial/links-website is open source project.
       </div>
       <div class="header_text flex_column_center treemtxt">
         <h1 class="header_h_item">William Otavio Souto</h1>
-        <h2 class="header_h_item">Fisioterapia, massoterapia, treinamento funcional e Pilates</h2>
+        <h2 class="header_h_item">Fisioterapia e massoterapia</h2>
       </div>
     <!-- Logo, Title and Description Codes End -->  
 
@@ -122,7 +122,7 @@ https://github.com/ardacarofficial/links-website is open source project.
       <section id="main_section_container_1" class="flex_column_center">
         <!-- Menu Text Item -->
         <div class="main_text_item">
-          <p>Fisioterapia, tratamento da dor, treinamento funcional, Massagem Sueca(Clássica), Liberação miofascial(Deep Tissue), Drenagem linfática, Massagem Relaxante, Massagem com pedras quentes, Ventosaterapia, Liberação miofascial(Conceito ROLF), auriculoterapia e Pilates.</p>
+          <p>Fisioterapia, tratamento da dor, Massagem para dor (Clínica), Massagem Relaxante, Massagem Sueca(Clássica), Liberação miofascial(Deep Tissue), Treinamento funcional, Drenagem linfática, Massagem com pedras quentes, Ventosaterapia, Liberação miofascial(Conceito ROLF), auriculoterapia e Pilates.</p>
         </div>
         <!-- Menu Small Item 
         <div class="main_small_button_list">
@@ -157,7 +157,7 @@ https://github.com/ardacarofficial/links-website is open source project.
           <button class="main_button_item">Currículo Lattes</button>
         </a>
       </section>
-        <div class="header_svg_list flex_row_center qrcodes">
+       <!-- <div class="header_svg_list flex_row_center qrcodes">
         <div class="header_svg_item">
           <a href="files/Contato%20Will%20Souto.vcf" rel="nofollow" target="_top">
             <img src="img/QRcartaocontato.png" /> <p>Cartão de contato</p>
@@ -173,7 +173,7 @@ https://github.com/ardacarofficial/links-website is open source project.
             <img src="img/QRwhats.png" /><p>WhatsApp</p>
           </a>
         </div>
-        </div>
+        </div>-->
         
          <!-- Contact Start -->
     <div class="container-fluid  contatocont">
